--- a/components/Navbar.module.scss
+++ b/components/Navbar.module.scss
@@ -3,4 +3,11 @@
   display: flex;
   gap: 10px;
   justify-content: center;
+  margin: 20px;
+
+  * {
+    background: black;
+    color: white;
+    padding: 10px 20px;
+  }
 }
