--- a/components/Navbar.module.scss
+++ b/components/Navbar.module.scss
@@ -4,10 +4,73 @@
   gap: 10px;
   justify-content: center;
   margin: 20px;
+  letter-spacing: 0.5px;
 
-  * {
-    background: black;
-    color: white;
+  a {
     padding: 10px 20px;
+    text-align: center;
+  }
+  &_link {
+    position: relative;
+    text-align: center;
+    &:before,
+    &:after {
+      content: '';
+      position: absolute;
+      width: 0;
+      height: 1px;
+      top: 50%;
+      margin-top: 15px;
+      background: rgb(0, 0, 0);
+    }
+
+    &:before {
+      left: 0px;
+    }
+    &:after {
+      right: 0px;
+      background: rgb(0, 0, 0);
+      transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
+    }
+
+    &:hover:before {
+      background: rgb(0, 0, 0);
+      width: 100%;
+      transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
+    }
+
+    &:hover:after {
+      background: rgb(0, 0, 0);
+      background: transparent;
+      width: 100%;
+      transition: 0s;
+    }
+  }
+}
+.active {
+  &:before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    top: 50%;
+    margin-top: 15px;
+    background: rgb(0, 0, 0);
+  }
+  &:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    top: 50%;
+    margin-top: 15px;
+    background: rgb(0, 0, 0);
+  }
+
+  &:before {
+    left: 0px;
+  }
+  &:after {
+    right: 0px;
   }
 }
