connect to mongodb

--- a/components/AddToDoForm.module.scss
+++ b/components/AddToDoForm.module.scss
@@ -7,10 +7,10 @@
   border: 1px solid $secondaryColor;
   padding: 30px;
 
-  &__importance {
-  }
-  &__importanceValue {
-  }
+  // &__importance {
+  // }
+  // &__importanceValue {
+  // }
   &_description {
     margin-top: 20px;
     word-wrap: break-word;
