--- a/pages/to-do-list/ToDos.module.scss
+++ b/pages/to-do-list/ToDos.module.scss
@@ -1,8 +1,24 @@
 .container {
   display: flex;
-  justify-content: center;
   padding: 20px;
-  &.main {
-    width: 50%;
+  flex-direction: column;
+  // justify-content: center;
+  align-items: center;
+  &__main {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    // align-items: center;
+    &_column {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      // justify-content: center;
+    }
+    &_list {
+      padding: 0;
+      display: block;
+      list-style-type: none;
+      // background: red;
+    }
   }
 }
