add edit delete buttons

--- a/components/ToDo.module.scss
+++ b/components/ToDo.module.scss
@@ -1,5 +1,15 @@
 @import '../styles/config';
+@mixin iconStyle {
+  all: unset;
+  transition: all 0.5s ease-out;
+  color: white;
+  cursor: pointer;
+  &:hover {
+    transform: scale(1.2);
+  }
+}
 .container {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -29,5 +39,24 @@
     border-top: 1px solid $secondaryColor;
     padding-top: 20px;
     text-align: center;
+  }
+  &:hover &__delete {
+    color: black;
+  }
+  &:hover &__edit {
+    color: black;
+  }
+
+  &__delete {
+    @include iconStyle;
+    position: absolute;
+    right: 7px;
+    top: 10px;
+  }
+  &__edit {
+    @include iconStyle;
+    position: absolute;
+    right: 30px;
+    top: 10px;
   }
 }
