--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+
 html,
 body,
 input {
   padding: 0;
   margin: 0;
-  font-family: 'Lora', serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 a {
@@ -13,4 +15,5 @@ a {
 
 * {
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
